--- a/app/assets/stylesheets/components/_pill.scss
+++ b/app/assets/stylesheets/components/_pill.scss
@@ -6,7 +6,8 @@
   color: #122C7E;
   margin-top: 5px !important;
   margin-bottom: 5px !important;
-  font-size: 18px !important;
+  font-size: 16px !important;
+  font-weight:bolder !important;
 
   &.active{
     background-color: #132D7E;
