--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,7 @@
 </div>
 <div class="">
   <h4>Bio:</h4>
-  <h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit fuga nam minima provident nemo aperiam doloremque, in impedit, assumenda, corporis esse. Sequi adipisci, perferendis, et officiis nisi magnam iusto officia?</h5>
+  <h5> <%= @user.bio %></h5>
 </div>
     <div class="row mx-1" style="justify-content: space-evenly;">
       <% unless @user.characteristics.nil? %>
