created navbar with back buttons; still need to fix the links

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -3,16 +3,34 @@
   padding: 0.75rem 1rem;
   border-bottom: 1px ;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+  i{
+    font-size: 24px;
+    color: #7F7F7F;
+  }
 }
 
 .navbar-hivie {
-  justify-content: space-between;
+  // justify-content: space-between;
   background: white;
 }
 
 .navbar-hivie .navbar-collapse {
   flex-grow: 0;
 }
+
+
+// Logo centered vertically for the navbar_logo
+#logo-navbar{
+  margin-bottom: 0;
+}
+
+.navbar-toggler{
+  border: none;
+  padding: 0;
+}
+
+
+
 
 // .navbar .navbar-brand {
 //   display: inline-block;
