--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8">
@@ -10,11 +10,20 @@
     <%#= stylesheet_pack_tag 'application', media: 'all' %> <!-- Uncomment if you import CSS in app/javascript/packs/application.js -->
   </head>
   <body>
+
     <!-- to be done later for chat navbar -->
-    <% unless current_page?(new_user_session_path)%>
+    <!-- COMMENTED OUT FOR NOW -->
+    <%# unless current_page?(new_user_session_path)%>
     <!-- add line to above statement >>> || current_page?(chat_path)  -->
+      <%#= render 'shared/navbar' %>
+      <%#= render 'shared/flashes' %>
+    <%# end %>
+    <% if current_page?(new_user_registration_path || new_user_characteristic_path || edit_profile_path) %>
+      <%= render 'shared/navbar_logo' %>
+    <% elsif current_page?(user_path) %>
       <%= render 'shared/navbar' %>
-      <%= render 'shared/flashes' %>
+    <%# elsif current_page?(user_chat_path) %>
+      <%= render 'shared/chat_navbar' %>
     <% end %>
 
     <!-- main container -->
@@ -29,7 +38,4 @@
 </html>
 
 
-<%# if !current_page?(url_for(:controller => 'sessions', :action => '')) %>
-  <%#= render 'shared/navbar' %>
-  <%#= render 'shared/flashes' %>
-<%# end %>
+
