VIEW: Updating visual for Matches List

--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -1,20 +1,19 @@
 <div class="home-container">
-  <div class="row">
-    <div class="col-xs-12 col-sm-4 col-sm-offset-4">
+  <div class="col-xs-12 col-sm-4 col-sm-offset-4">
 
     <h3 class="blue-profile-header" style="text-align: left; border-bottom: 1px solid gray">Matches</h3>
     <div class="matches-index container">
       <div class="row">
-        <div class="col-sm">
+        <div class="col">
           <div class= "match-avatar">
             <% @matches.each do |match| %>
               <%= link_to match_messages_path(match) do %>
                 <div class="match-username" style="text-align: center">
                 <% if match.user_one == current_user %>
-                  <%= cl_image_tag match.user_two.photo, class: "avatar-bordered" %>
+                  <%= cl_image_tag match.user_two.photo, class: "avatar-bordered inline-block" %>
                   <p> <%= match.user_two.username %></p>
                 <% else %>
-                  <%= cl_image_tag match.user_one.photo, class: "avatar-bordered" %>
+                  <%= cl_image_tag match.user_one.photo, class: "avatar-bordered inline-block" %>
                   <p> <%= match.user_one.username %></p>
                 <% end %>
                 </div>
@@ -27,18 +26,19 @@
 
 
     <h3 class="blue-profile-header" style="text-align: left; border-bottom: 1px solid gray">Conversations</h3>
-    <div class="message-preview">
-    <% @matches.each do |match| %>
-      <% if match.user_one == current_user %>
-        <%= cl_image_tag match.user_two.photo, class: "avatar-large" %>
-        <p> <%= match.user_two.username %></p>
-      <% else %>
-        <%= cl_image_tag match.user_one.photo, class: "avatar-large" %>
-        <p> <%= match.user_one.username %></p>
-      <% end %>
-      <p class="message-text"> <%#= messages.content.truncate(10) %></p>
-    <% end %>
+    <div class="card-message-preview">
+      <div class="row">
+        <% @matches.each do |match| %>
+          <% if match.user_one == current_user %>
+            <img style="float:left" src=<%= cl_image_tag match.user_two.photo, class: "avatar-large" %>/>
+            <div class="card-heading"><p><%= match.user_two.username %></p></div>
+          <% else %>
+            <img style="float:left" src=<%= cl_image_tag match.user_one.photo, class: "avatar-large" %>/>
+            <div class="card-heading"><p><%= match.user_one.username %></p></div>
+          <% end %>
+          <p class="message-text" style="clear:both"> Message Preview<%#= messages.content.truncate(10) %></p>
+        <% end %>
+      </div>
     </div>
-
   </div>
 </div>
