--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -16,6 +16,10 @@
   border-radius: 50%;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: #EC5A73 1px solid;
+  .inline-block {
+    display: inline-block; }
+  .center {
+    text-align: center; }
   // avatar pink, need to set status to match
 }
 
