--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -26,6 +26,16 @@
   box-shadow: 1px 1px 2px rgba(0,0,0,0.1);
 }
 
-.form-inputs.focus {
-  border-color: $hivie-pink !important;
+
+.was-validated .form-control:valid:focus, .form-control.is-valid:focus {
+  border-bottom-width: 2px !important;
+  border-bottom-color: $hivie-pink !important;
+}
+
+ .form-control.is-valid:focus {
+  box-shadow: 0 0 0 0.2rem #f8f9fa !important;
+}
+
+.form-control.is-valid {
+  border-color: #f4f4f4 !important;
 }
