--- a/app/views/shared/_chat_navbar.html.erb
+++ b/app/views/shared/_chat_navbar.html.erb
@@ -1,6 +1,6 @@
-<!-- <div class="navbar navbar-expand-sm navbar-light navbar-hivie">
+<div class="navbar navbar-expand-sm navbar-light navbar-hivie">
   <%#= link_to "#", class: "navbar-brand" do %>
-    <h2>HiVie</h2>
+    <h2>Chat</h2>
     <%# end %>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,4 +34,4 @@
         </ul>
       <%# end %>
   </div>
-</div> -->
+</div>
