--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,14 +1,14 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-hivie justify-content-between d-flex">
 
-    <div>
-      <i class="fas fa-chevron-left"></i>
-    </div>
+  <div>
+    <i class="fas fa-chevron-left"></i>
+  </div>
 
-    <div>
-      <%= link_to "#", class: "navbar-brand align-items-center mr-0" do %>
-        <h2>HiVie</h2>
-      <% end %>
-    </div>
+  <div>
+    <%= link_to "#", class: "navbar-brand align-items-center mr-0" do %>
+      <h2>HiVie</h2>
+    <% end %>
+  </div>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -16,27 +16,28 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
+
       <% if user_signed_in? %>
+
           <li class="nav-item">
             <%= link_to "Match", user_path(User.all.sample), class: "nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Messages", "#", class: "nav-link" %>
+            <%= link_to "Messages", matches_path, class: "nav-link" %>
           </li>
-        <!-- <li class="nav-item dropdown"> -->
-          <%#= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-          <!-- <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown"> -->
-            <li> <%= link_to "Edit Account", edit_user_registration_path, class: "nav-link" %> </li>
-            <li> <%= link_to "Update Interests", user_characteristic_path(current_user), class: "nav-link" %> </li>
-            <li> <%= link_to "Update Preferences", edit_profile_path(current_user), class: "nav-link" %> </li>
-            <li> <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "nav-link" %> </li>
-          <!-- </div> -->
-        <!-- </li> -->
+          <li> <%= link_to "Edit Account", edit_user_registration_path, class: "nav-link" %> </li>
+          <li> <%= link_to "Update Interests", user_characteristic_path(current_user), class: "nav-link" %> </li>
+          <li> <%= link_to "Update Preferences", edit_profile_path(current_user), class: "nav-link" %> </li>
+          <li> <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "nav-link" %> </li>
+
       <% else %>
+
         <li class="nav-item">
           <%= link_to "Login", new_user_session_path, class: "nav-link" %>
         </li>
+
       <% end %>
+
     </ul>
   </div>
 </div>
