--- a/app/views/shared/_chat_navbar.html.erb
+++ b/app/views/shared/_chat_navbar.html.erb
@@ -1,30 +1,37 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-hivie justify-content-between d-flex">
 
   <div>
-    <i class="fas fa-chevron-left"></i>
+    <%= link_to matches_path do %>
+      <i class="fas fa-chevron-left"></i>
+    <% end %>
+    <%#= link_to :back do %>
+      <!-- <i class="fas fa-chevron-left"></i> -->
+    <%# end %>
   </div>
 
-  <div>
-    <%= link_to "#", class: "navbar-brand align-items-center mr-0" do %>
+  <div class="text-center">
+    <%= link_to user_path(@match.matched_user(current_user)), class: "navbar-brand align-items-center mr-0" do %>
       <%= cl_image_tag @match.matched_user(current_user).photo, crop: :fill, class: "avatar-small" %>
     <% end %>
+      <h5> <%= @match.matched_user(current_user).username %> </h5>
   </div>
 
   <i class="fas fa-info-circle" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"></i>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav mr-auto text-right">
 
       <% if user_signed_in? %>
 
-          <li class="nav-item">
-            <%= link_to "Match", user_path(User.all.sample), class: "nav-link" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "Messages", matches_path, class: "nav-link" %>
-          </li>
-          <li> <%= link_to "Delete the match", edit_user_registration_path, class: "nav-link" %> </li>
-          <li> <%= link_to "Report an abuse", user_characteristic_path(current_user), class: "nav-link" %> </li>
+          <!-- <li class="nav-item"> -->
+            <%#= link_to "Match", user_path(User.all.sample), class: "nav-link" %>
+          <!-- </li> -->
+          <!-- <li class="nav-item"> -->
+            <%#= link_to "Messages", matches_path, class: "nav-link" %>
+          <!-- </li> -->
+          <li> <%= link_to "Block & report", user_characteristic_path(current_user), class: "nav-link" %> </li>
+          <li> <%= link_to "Unmatch", match_path(@match), method: :delete, class: "nav-link" %> </li>
+          <li> <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "nav-link" %> </li>
 
       <% else %>
 
