--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-hivie justify-content-between d-flex">
 
   <div>
-    <i class="fas fa-chevron-left"></i>
+      <i class="fas fa-chevron-left"></i>
   </div>
 
   <div>
@@ -15,7 +15,7 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav mr-auto text-right">
 
       <% if user_signed_in? %>
 
