Not geocoder, but applying pink border on register page as well

--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -1,6 +1,16 @@
-.form-control {
+.form-control{
   border-radius: 5px;
+  border-bottom-width: 2px !important;
 }
+.form-control:focus {
+  color: #495057;
+  background-color: #fff;
+  border-color: #f4f4f4;
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem #f4f4f4;
+  border-bottom-color: #EC5A73 !important;
+}
+
 
 // BELOW: deleted the margins except from the month input of birtday
 
@@ -27,9 +37,9 @@
 }
 
 
-.was-validated .form-control:valid:focus, .form-control.is-valid:focus {
-  border-bottom-width: 2px !important;
-  border-bottom-color: $hivie-pink !important;
+ .form-control:valid:focus, .form-control.is-valid:focus {
+    border-bottom-width: 2px !important;
+    border-bottom-color: $hivie-pink !important;
 }
 
  .form-control.is-valid:focus {
