--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -30,7 +30,7 @@
         <%= f.input :gender, required: true, autofocus: true, collection: ["Male", "Female", "Non-binary"]%>
         <%= f.input :diagnosis_year, label: 'Living HIV+ Since:', placeholder: '2008', input_html: { min: '1950', step: 'any', max: 'Date.today.year' } %>
         <%= f.input :birthday, as: :date, start_year: Date.today.year - 87, end_year: Date.today.year - 5, order: [:day, :month, :year], required: true %>
-        <%= f.inpout :bio %>
+        <%= f.input :bio %>
       </div>
 
       <div class="form-actions mt-5">
