--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -21,10 +21,10 @@
 
         <div class="row">
           <div class="col">
-            <label class="select required" for="user_distance">Distance<abbr title="required">*</abbr></label>
+            <label class="select required" for="user_distance_pref">Distance<abbr title="required">*</abbr></label>
           </div>
           <div class="col">
-            <input type="range" name="user[distance]" class="multi-range" id="distanceInputId" value="5" min="1" max="100" oninput="distanceOutputId.value = distanceInputId.value">
+            <input type="range" name="user[distance_pref]" class="multi-range" id="distanceInputId" value="5" min="1" max="100" oninput="distanceOutputId.value = distanceInputId.value">
             <output name="distanceOutputName" id="distanceOutputId"></output>
           </div>
         </div>
