--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,9 +1,9 @@
 // Import Google fonts
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Source+Sans+Pro:400,600,700&display=swap" rel="stylesheet");
 @import "colors";
 
 // Define fonts for body and headers
-$body-font: "Montserrat", "Open Sans", "sans-serif";
+$body-font: "Source Sans Pro", "Open Sans", "sans-serif";
 $headers-font: "Montserrat", "Open Sans", "sans-serif";
 
 // To use a font file (.woff) uncomment following lines
