FIX: Update to Colors and Fonts.scss files

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -11,3 +11,5 @@ $light-gray: #F4F4F4;
 $hivie-pink: #EC5A73;
 $hivie-blue: #132D7E;
 $hivie-gray: #E3E3E3;
+$hivie-purple: RGB(70,44,114);
+$hivie-logo: RGB(255,100,152);
