--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,14 +2,14 @@
   <div class="row">
     <div class="col-xs-12 col-sm-4 col-sm-offset-4">
 
-    <h2 style="text-align: center;"><%= @user.first_name %>s Account Info</h2>
+    <h2 class="profile-header" style="text-align: center;">Account Info</h2>
 
     <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
     <%= f.error_notification %>
 
     <div class="form-inputs">
       <div class="photo-upload text-center">
-        <i class="fas fa-user-circle fa-5x" style="color: #132D7E"></i>
+        <i class="fas fa-user-circle fa-5x" style="color: $hivie-purple"></i>
         <%= f.input :photo, label: "Profile Picture" %>
         <%= f.input :photo_cache, as: :hidden %>
       </div>
