FIX: Update the hight of the button and change the color for .btn-pink

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -6,12 +6,12 @@
 }
 
 .btn-pink {
-  background-color: $hivie-pink;
+  background-color: $hivie-purple;
   color: white;
 }
 
 .btn-transparent {
-  color: black;
+  color: $hivie-purple;
   background-color: transparent;
 }
 
