--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -10,3 +10,6 @@ $gray: #0E0000;
 $light-gray: #F4F4F4;
 $hivie-pink: #EC5A73;
 $hivie-blue: #132D7E;
+$messages-grey: #E3E3E3;
+$hivie-purple: RGB(70,44,114);
+
