navbar functional with a nice collapse

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,7 +2,7 @@
   background: white;
   padding: 0.75rem 1rem;
   border-bottom: 1px ;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+  // box-shadow: 0 1px 2px rgba(0,0,0,0.2); REMOVING BORDER
   i{
     font-size: 24px;
     color: #7F7F7F;
@@ -10,7 +10,6 @@
 }
 
 .navbar-hivie {
-  // justify-content: space-between;
   background: white;
 }
 
@@ -19,22 +18,13 @@
 }
 
 
-// Logo centered vertically for the navbar_logo
-#logo-navbar{
-  margin-bottom: 0;
-}
-
 .navbar-toggler{
   border: none;
   padding: 0;
 }
 
+#logo{
+  margin-bottom: 0;
+  font-size: 26px !important;
+}
 
-
-
-// .navbar .navbar-brand {
-//   display: inline-block;
-//   text-align:center;
-//   float: none;
-//   vertical-align: top;
-// }
