--- a/app/assets/stylesheets/components/_messages.scss
+++ b/app/assets/stylesheets/components/_messages.scss
@@ -10,6 +10,7 @@
   justify-content: left;
   border-radius: 16px;
   max-width: 80%;
+  word-break: break-word;
 }
 
 .sent_msg {
@@ -22,6 +23,7 @@
   display: flex;
   justify-content: left;
   max-width: 80%;
+  word-break: break-word;
 }
 textarea#message_content {
   background: #F4F4F4;
