--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -1,7 +1,7 @@
 .button {
   height: 50px;
   width: 100%;
-  border-radius: 8px;
+  border-radius: 8px !important;
   font-size: 24px;
 }
 
@@ -9,6 +9,8 @@
 .btn-pink {
   background-color: $hivie-purple;
   color: white;
+  height: 50px !important;
+  border-radius: 8px !important;
 }
 
 // Login on Homepage
@@ -25,7 +27,7 @@
 }
 
 .btn {
-  font-size: 24px;
+  font-size: 20px;
   font-weight: 500;
 }
 
