--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -72,5 +72,11 @@ h3.black-profile-header {
   font-size: 1.5rem;
 }
 
+.form-inputs {
+  font-size: 20px !important;
+  font-weight: bold !important;
+  color: $hivie-purple;
+}
+
 
 
