--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -2,11 +2,11 @@
   <div class="row">
     <div class="col-xs-12 col-sm-4 col-sm-offset-4" style="position: absolute; top: 0; bottom: 0; left: 0; right: 0; display: flex; flex-direction: column;">
       <h3 class="profile-header" style="text-align: center; margin-top: 83px;">Match Preferences</h3>
-      <div style="display: flex; flex-grow: 1;"><%= simple_form_for @user, url: profile_path, method: :patch do |f| %></div>
+      <%= simple_form_for @user, url: profile_path, method: :patch do |f| %>
         <%= f.error_notification %>
 
-        <div class="form-inputs d-flex flex-column justify-content-between" style="width: 100%">
-          <div class="makeitbig">
+        <div class="form-inputs d-flex flex-column justify-content-between" style="width: 100%; height: 100%;">
+          <div class="makeitbig" style="display: flex; flex-grow: 1;">
             <%= f.input :diagnosis_year, label: 'Living HIV+ Since:', placeholder: '2008', input_html: { min: '1950', step: 'any', max: 'Date.today.year' } %>
             <%= f.input :sex_pref, label: 'Match with:', required: true, autofocus: true, collection: ["Male", "Female", "Non-binary"]%>
             <div class="row">
