both navbars are sticky

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -23,6 +23,13 @@
   padding: 0;
 }
 
+// .sticky {
+//   position: fixed;
+//   top: 0;
+//   width: 100%;
+// }
+
+
 #logo{
   margin-bottom: 0;
   font-size: 26px !important;
