--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-hivie justify-content-between d-flex">
+<div class="navbar navbar-expand-sm navbar-light navbar-hivie justify-content-between d-flex sticky-top">
 
   <div>
     <% if current_user && @potential_matches.any? && current_page?(matches_path) %>
