--- a/app/views/shared/_chat_navbar.html.erb
+++ b/app/views/shared/_chat_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-hivie justify-content-between d-flex">
+<div class="navbar navbar-expand-sm navbar-light navbar-hivie justify-content-between d-flex sticky-top">
 
   <div>
     <%= link_to matches_path do %>
