--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,17 +13,17 @@
 
     <!-- to be done later for chat navbar -->
     <!-- COMMENTED OUT FOR NOW -->
-    <%# unless current_page?(new_user_session_path)%>
+    <% unless current_page?(new_user_session_path)%>
     <!-- add line to above statement >>> || current_page?(chat_path)  -->
-      <%#= render 'shared/navbar' %>
-      <%#= render 'shared/flashes' %>
-    <%# end %>
+      <%= render 'shared/navbar' %>
+      <%= render 'shared/flashes' %>
+    <% end %>
 
     <!-- Add the if for the match option to disappear on the dropdown
     if the user is on the swiping page -->
 
 
-    <%= render 'shared/navbar' %>
+    <%#= render 'shared/navbar' %>
 
     <!-- main container -->
     <div class="main-container-hivie">
