placed the login button top-right

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,16 @@
 // Specific CSS for your home-page
+
+.background{
+  background: linear-gradient(180deg, #6455B3 0%, #D45F84 100%);
+  position: relative;
+}
+
+#home-logo{
+  color: $hivie-logo;
+}
+
+#login {
+  position: absolute;
+  top: -80px;
+  right: 20px;
+}
