--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -75,5 +75,9 @@ h3.black-profile-header {
   font-size: 1.5rem;
 }
 
-
+.card-header {
+  font-size: 24px !important;
+  font-weight: bold !important;
+  color: $hivie-purple;
+}
 
