--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -6,8 +6,7 @@
 </div>
 
 <h3 class="text-center mb-5 mt-5">Let's chat, and maybe more...</h3>
-
-<%= link_to 'Let\'s chat', root_path, class: "btn button btn-pink" %>
+  <%= link_to 'Let\'s chat', match_messages_path(@match), class: "btn button btn-pink" %>
 <div class="text-center">
-<%= link_to 'X', user_path(@next_user), class: "mt-5 btn btn-rounded btn-pink" %>
+  <%= link_to 'X', user_path(@next_user), class: "mt-5 btn btn-rounded btn-pink" %>
 </div>
