--- a/app/views/user_characteristics/new.html.erb
+++ b/app/views/user_characteristics/new.html.erb
@@ -7,7 +7,7 @@
       <div class="card-header" id="heading<%= index %>">
 
         <h2 class="mb-0">
-          <button class="btn" type="button"  data-toggle="collapse" data-target="#collapse-<%= index %>" aria-expanded="false" aria-controls="collapse-<%= index %>" >
+          <button class="btn accordion-title" type="button"  data-toggle="collapse" data-target="#collapse-<%= index %>" aria-expanded="false" aria-controls="collapse-<%= index %>" >
             <% if category == 'Personality' %>
               <i class="fas fa-user mr-2"></i>
             <% elsif category == 'Lifestyle' %>
