--- a/app/assets/stylesheets/components/_font-awesome-icons.scss
+++ b/app/assets/stylesheets/components/_font-awesome-icons.scss
@@ -1,10 +1,10 @@
 .fa-heart {
-  color: #4BCC92;
+  color: $hivie-logo;
   font-size: 50px;
 }
 
 .fa-times{
-  color: $hivie-pink;
+  color: $hivie-purple;
   font-size: 50px;
 }
 
