--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -1,6 +1,6 @@
 <div class="home-container">
   <div class="col-xs-12 col-sm-4 col-sm-offset-4">
-    <h3 class="profile-header" style="text-align: left; border-bottom: 1px solid gray">Matches</h3>
+    <h3 class="profile-header" style="text-align: left; border-bottom: 1px solid RGB(70,44,114, 0.5);">Matches</h3>
     <div class="matches-index container scrolling-wrapper-flexbox">
       <div class="row match-preview">
         <% @matches.each do |match| %>
@@ -23,7 +23,7 @@
       </div>
     </div>
 
-    <h3 class="profile-header" style="text-align: left; border-bottom: 1px solid gray; margin: 0px 0px">Conversations</h3>
+    <h3 class="profile-header" style="text-align: left; border-bottom: 1px solid RGB(70,44,114, 0.5); margin: 0px 0px">Conversations</h3>
         <% @matches.each do |match| %>
           <div class="preview-message-card d-flex justify-content-start"  style="border-bottom: 1px solid gray">
             <% if match.user_one == current_user %>
@@ -32,7 +32,7 @@
               </div>
               <div class= "match-card-info align-self-center ml-4">
                 <div class="match-card-header"><h5><%= match.user_two.username %></h5></div>
-                <p class="message-text" style="clear:both">Lorem ipsum dolor sit amet, consectetur adipiscing elit<%#= messages.content.truncate(10) %></p>
+                <p class="message-text" style="clear:both"><%= match.messages.last.content.truncate(50) %></p>
               </div>
             <% else %>
               <div>
@@ -40,7 +40,7 @@
               </div>
               <div class= "match-card-info align-self-center ml-4">
                 <div class="match-card-header"><h5><%= match.user_one.username %></h5></div>
-                <p class="message-text" style="clear:both">Lorem ipsum dolor sit amet, consectetur adipiscing elit <%#= messages.content.truncate(10) %></p>
+                <p class="message-text" style="clear:both"><%= match.messages.last.content.truncate(50) %></p>
               </div>
             <% end %>
             </div>
