--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -23,7 +23,7 @@
   width: 50px;
   border-radius: 50%;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  border: #EC5A73 2px solid;
+  border: 3px solid $hivie-pink;
   .inline-block {
     display: inline-block; }
   .center {
