--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -25,7 +25,7 @@
 
     <h3 class="profile-header" style="text-align: left; border-bottom: 1px solid RGB(70,44,114, 0.5); margin: 0px 0px">Conversations</h3>
         <% @matches.each do |match| %>
-          <div class="preview-message-card d-flex justify-content-start"  style="border-bottom: 1px solid gray">
+          <div class="preview-message-card d-flex justify-content-start"  style="border-bottom: 1px solid RGB(70,44,114, 0.5)">
             <% if match.user_one == current_user %>
               <div>
                 <%= cl_image_tag match.user_two.photo, class: "avatar-match-list mb-2 mt-2" %>
