--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,6 @@
-<div class="card-matching">
-  <!-- add the lack gradient at the bottom, look what claire sent. And add the blure -->
-<!-- ("sample.jpg", blur: 600) -->
-  <div class="bgimg" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4))">
-    <%= cl_image_tag @user.photo, height: 400, width: 344, crop: :fill, class: "card-img-top"%>
+ <div class="card-matching">
+  <div class="bg-img" style="background-image: url(<%= cloudinary_url(@user.photo, :transformation => {:effect => "blur:800"}) %>)">
   </div>
-
   <div class="card-infos-users ml-2">
     <div>
       <div class="alias-font">
@@ -17,11 +13,15 @@
     <!-- <h5 class="card-infos-users-age"> <%= @user.age  %></h5> -->
   </div>
 </div>
-
 <!-- need to add the truncate to shorten the bio -->
   <div class="bio-font mt-3 mb-3">
-    <div class="10">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, esse. Eos nihil, nulla animi? Animi similique hic facilis quia, architecto ullam optio obcaecati, cumque neque omnis iusto, mollitia sequi iste.</div>
-    <%= @user.bio %>
+    <div class="10">
+      <% if @user.bio %>
+        <%= @user.bio.truncate(50) %>
+      <% else %>
+        No user bio
+      <% end %>
+    </div>
   </div>
     <div class="row mx-1" style="justify-content: space-evenly;">
       <% unless @user.characteristics.nil? %>
