--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -19,8 +19,35 @@
 <% end %>
 </div>
 
-
-
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">Launch</button>
+<!-- MODAL POP-UP -->
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Send Reveal Request </h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Your match has requested to share their identity. Would you like to share yours?</p>
+      </div>
+      <div class="modal-footer">
+        <div class="row">
+          <div class="col">
+            <%= link_to "Accept", reveal_path, id: 'accept' %>
+          </div>
+          <div class="col">
+            <%#= link_to "Decline", id: 'decline' %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+  <!-- MODAL POP-UP END -->
 
 <div class="input_msg text-center fixed-bottom" style="padding-top: 16px;">
   <%= simple_form_for [@match, @message] do |f| %>
@@ -34,4 +61,9 @@
       </div>
   <% end %>
 </div>
+
+
+
+
+
 
