--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -37,7 +37,8 @@
       <div class="modal-footer">
         <div class="row">
           <div class="col">
-            <%= link_to "Accept", reveal_path, id: 'accept' %>
+            <%= link_to "Accept", update_reveal_match_path(@match, match: {reveal_status: 'approved'}), method: :patch %>
+            <%= link_to "Decline", update_reveal_match_path(@match, match: {reveal_status: 'declined'}), method: :patch %>
           </div>
           <div class="col">
             <%#= link_to "Decline", id: 'decline' %>
