--- a/app/views/shared/_chat_navbar.html.erb
+++ b/app/views/shared/_chat_navbar.html.erb
@@ -19,13 +19,11 @@
     <ul class="navbar-nav mr-auto text-right">
 
       <% if user_signed_in? %>
-
           <li> <%= link_to "Block & report", user_characteristic_path(current_user), class: "nav-link" %> </li>
           <li> <%= link_to "Unmatch", match_path(@match), method: :delete, class: "nav-link" %> </li>
           <li> <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "nav-link" %> </li>
-
+          <li> <button type="button", data-toggle="modal" data-target="#ModalRequest">Launch</button> </li>
       <% else %>
-
         <li class="nav-item">
           <%= link_to "Login", new_user_session_path, class: "nav-link" %>
         </li>
