--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,24 +1,24 @@
 <div class="home-container">
   <div class="row">
     <div class="col-xs-12 col-sm-4 col-sm-offset-4" style="position: absolute; top: 0; bottom: 0; left: 0; right: 0; display: flex; flex-direction: column;">
-      <h3 class="profile-header" style="text-align: center; margin-top: 83px;">Match Preferences</h3>
+      <h3 class="profile-header" style="text-align: center; margin-top: 83px; margin-bottom: 30px;">Match Preferences</h3>
       <%= simple_form_for @user, url: profile_path, method: :patch do |f| %>
         <%= f.error_notification %>
 
         <div class="form-inputs d-flex flex-column justify-content-between" style="width: 100%; height: 100%;">
-          <div class="makeitbig" style="display: flex; flex-grow: 1; min-height: 73vh;">
-            <div class="container">
+          <div class="makeitbig" style="display: flex; flex-grow: 1; min-height: 71vh;">
+            <div class="container" style="padding-right: 0px; padding-left: 0px;">
               <div class="row">
                 <div class="col">
                  <%= f.input :diagnosis_year, label: 'Living HIV+ Since:', placeholder: '2008', input_html: { min: '1950', step: 'any', max: 'Date.today.year' } %>
                 </div>
               </div>
-              <div class="row">
+              <div class="row" style="margin-bottom: 15px">
                 <div class="col">
                   <%= f.input :sex_pref, label: 'Match with:', required: true, autofocus: true, collection: ["Male", "Female", "Non-binary"]%>
                 </div>
               </div>
-              <div class="row">
+              <div class="row" style="margin-bottom: 15px">
                 <div class="col">
                   <%= f.input :min_age, collection: 18..80%>
                 </div>
@@ -26,11 +26,11 @@
                   <%= f.input :max_age, collection: 19..80%>
                 </div>
               </div>
-              <div class="row">
+              <div class="row" style="margin-bottom: 15px">
                 <div class="col">
                   <label class="select required" for="user_distance_pref">Distance<abbr title="required">*</abbr></label>
                 </div>
-                <div class="col">
+                <div class="col" style="margin-bottom: 15px">
                   <input type="range" name="user[distance_pref]" class="multi-range" id="distanceInputId" value="5" min="1" max="100" oninput="distanceOutputId.value = distanceInputId.value">
                   <output name="distanceOutputName" id="distanceOutputId"></output>
                 </div>
